--- a/game/Bomberman.cbp
+++ b/game/Bomberman.cbp
@@ -51,9 +51,9 @@
 				</Linker>
 			</Target>
 			<Target title="Debug-Windows">
-				<Option output="../../bin/Bomberman" prefix_auto="1" extension_auto="1" />
-				<Option working_dir="../../bin" />
-				<Option object_output="../../bin" />
+				<Option output="Bomberman" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="../game" />
+				<Option object_output="../game/obj" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
@@ -72,9 +72,9 @@
 				</Linker>
 			</Target>
 			<Target title="Release-Windows">
-				<Option output="../../bin/Bomberman" prefix_auto="1" extension_auto="1" />
-				<Option working_dir="../../bin" />
-				<Option object_output="../../bin" />
+				<Option output="Bomberman" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="../game" />
+				<Option object_output="../game/obj" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Option use_console_runner="0" />
@@ -105,15 +105,14 @@
 		<Linker>
 			<Add directory="../../lib" />
 		</Linker>
-		<Unit filename="MenuState.cpp" />
-		<Unit filename="MenuState.h" />
-		<Unit filename="OptionsState.cpp" />
-		<Unit filename="OptionsState.h" />
-		<Unit filename="PauseState.cpp" />
-		<Unit filename="PauseState.h" />
-		<Unit filename="PlayState.cpp" />
-		<Unit filename="PlayState.h" />
-		<Unit filename="main.cpp" />
+		<Unit filename="include/MenuState.h" />
+		<Unit filename="include/OptionsState.h" />
+		<Unit filename="include/PauseState.h" />
+		<Unit filename="include/PlayState.h" />
+		<Unit filename="src/MenuState.cpp" />
+		<Unit filename="src/OptionsState.cpp" />
+		<Unit filename="src/PauseState.cpp" />
+		<Unit filename="src/PlayState.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
