Atualiza projeto Eclipse

--- a/game/Makefile
+++ b/game/Makefile
@@ -2,12 +2,18 @@ CC = g++
 HDIR = ./include
 SDIR = ./src
 ODIR = ./obj
+
 IDIR = -I./lib/CGF/include
 IDIR += -I./lib/CGF/include/tmxloader
 IDIR += -I./lib/CGF/include/pugixml
 IDIR += -I./lib/Box2D-2.3.0/include
 IDIR += -I./lib/SFML-2.2/include
-LIBDIR = -L ./lib -L ./lib/Box2D-2.3.0/lib-Linux64/ -L ./lib/SFML-2.2/lib-Linux64 -L ./lib/glew-1.10
+
+LIBDIR = -L ./lib 
+LIBDIR += -L ./lib/Box2D-2.3.0/lib-Linux64/ 
+LIBDIR += -L ./lib/SFML-2.2/lib-Linux64 
+LIBDIR += -L ./lib/glew-1.10
+
 CFLAGS = -std=c++11 $(LIBDIR) -I$(HDIR) $(IDIR) -lsfml-graphics -lsfml-window -lsfml-system -lsfml-audio -lz -lBox2D -lCGF-Linux
 
 
