Corrige problemas no codeblocks

--- a/game/Makefile
+++ b/game/Makefile
@@ -4,7 +4,7 @@ SDIR = ./src
 ODIR = ./obj
 
 IDIR = -I./lib/CGF/include
-IDIR += -I./lib/CGF/include/tmxloader
+IDIR += -I./lib/CGF/include/tmx
 IDIR += -I./lib/CGF/include/pugixml
 IDIR += -I./lib/Box2D-2.3.0/include
 IDIR += -I./lib/SFML-2.2/include
@@ -14,7 +14,7 @@ LIBDIR += -L ./lib/Box2D-2.3.0/lib-Linux64/
 LIBDIR += -L ./lib/SFML-2.2/lib-Linux64 
 LIBDIR += -L ./lib/glew-1.10
 
-CFLAGS = -std=c++11 $(LIBDIR) -I$(HDIR) $(IDIR) -lsfml-graphics -lsfml-window -lsfml-system -lsfml-audio -lz -lBox2D -lCGF-Linux
+CFLAGS = -std=c++11 $(LIBDIR) -I$(HDIR) $(IDIR) -lsfml-graphics -lsfml-window -lsfml-system -lsfml-audio -lBox2D -lCGF-Linux -lz 
 
 
 _DEPS = OptionsState.h PauseState.h PlayState.h MenuState.h
