Bombas funcionando. Adicionado WinState

--- a/game/Makefile
+++ b/game/Makefile
@@ -17,10 +17,10 @@ LIBDIR += -L ./lib/glew-1.10
 
 CFLAGS = -std=c++11 $(LIBDIR) -I$(HDIR) $(IDIR) -lsfml-graphics -lsfml-window -lsfml-system -lsfml-audio -lBox2D -lCGF-Linux -lz 
 
-_DEPS = Explosion.h Banana.h Enemy.h Item.h Map.h MenuState.h Player.h PlayState.h State.h
+_DEPS = Explosion.h Banana.h Enemy.h Item.h Map.h MenuState.h Player.h PlayState.h WinState.h State.h
 DEPS  = $(patsubst %,$(HDIR)/%,$(_DEPS))
 
-_OBJ = Main.o Explosion.o Banana.o Enemy.o Item.o Map.o MenuState.o Player.o PlayState.o State.o
+_OBJ = Main.o Explosion.o Banana.o Enemy.o Item.o Map.o MenuState.o Player.o PlayState.o WinState.o State.o
 OBJ = $(patsubst %,$(ODIR)/%,$(_OBJ))
 
 $(ODIR)/%.o: $(SDIR)/%.cpp $(DEPS)
